# governosombra

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml  download-ggml-model.sh
.github/workflows/: workflow.yml
src/: main.rs  process.rs
templates/: analytics.html  books.html  episode.html  index.html
transcripts/: 001.txt  002.txt  003.txt  004.txt  005.txt  006.txt  007.txt  008.txt  009.txt  010.txt  011.txt  012.txt  013.txt  014.txt  015.txt  016.txt  017.txt  018.txt  019.txt  020.txt  021.txt  022.txt  023.txt  024.txt  025.txt  026.txt  027.txt  028.txt  029.txt  030.txt  031.txt  032.txt  033.txt  034.txt  035.txt  036.txt  037.txt  038.txt  039.txt  040.txt  (+282 more)
