[package]
name = "governosombra"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "process"
path = "src/process.rs"

[[bin]]
name = "app"
path = "src/main.rs"

[dependencies]
whisper-rs = "0.5.0"
hound = "3.5.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.27.0", features = ["full"] }
feed-rs = "1.3.0"
futures = "0.3.28"
chrono = { version = "0.4.24", features = ["serde"] }
actix-web = "4"
tera = "1.18.1"
serde = "1.0.160"
cronjob = "0.4.17"
env_logger = "0.11.6"
sentry = "0.35.0"
log = "0.4.22"
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.66.0"
anyhow = "1.0.95"
serde_json = "1.0"

