[package]
name = "governosombra"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "process"
path = "src/process.rs"

[[bin]]
name = "app"
path = "src/main.rs"

[dependencies]
actix-web = "4"
anyhow = "1.0.95"
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.66.0"
chrono = { version = "0.4.24", features = ["serde"] }
cronjob = "0.4.17"
env_logger = "0.11.6"
feed-rs = "1.3.0"
futures = "0.3.28"
hound = "3.5.0"
log = "0.4.22"
reqwest = { version = "0.11", features = ["json"] }
sentry = "0.35.0"
sentry-actix = "0.35.0"
serde = "1.0.160"
serde_json = "1.0"
tera = "1.18.1"
tokio = { version = "1.27.0", features = ["full"] }
whisper-rs = "0.15.1"
